[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "v1indicators"
version = "0.2.0"
description = "Technical analysis indicators and scanners."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Amit"}
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=2.0.0",
    "numba>=0.56.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["v1indicators*"]
exclude = ["v1backtest*", "tests*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
